OO-9032: add status (read-only) to user and managed user objects